# Cliff

./: CMakeLists.txt  README.md
data/: ebnf_syntax.ebnf  syntax.ebnf
include/cliff/: Core.h  EntryBoundRegister.h  ProgramOption.h
include/cliff/front_end/: FrontChain.h  Lexer.h  Parser.h  Reader.h  Syntax.h
include/cliff/shared/: AbstractSyntaxTree.h  Automata.h  EntryModule.h  Exception.h  HashString.h  Lexeme.h  MemoryContainer.h  Module.h  QualifiedIdentifier.h  Singleton.h  Token.h  TreeComparatorMapper.h  TreeComparatorOnline.h  TreePatternMatching.h  TreeTransformer.h
include/cliff/tool/syntax_generator/: EBNF.h  EBNFConstruct.h  EBNFRepresentation.h  LexerGenerator.h  ParserGenerator.h  RegularExpressionRepresentation.h  SyntaxGenerator.h  SyntaxNodeName.h  SyntaxReader.h  SyntaxRepresentation.h
src/: Core.cpp  EntryBoundRegister.cpp  ProgramOption.cpp
src/executable/: main.cpp
src/front_end/: Lexer.cpp  Parser.cpp  Reader.cpp  Syntax.cpp
src/shared/: AbstractSyntaxTree.cpp  Automata.cpp  Exception.cpp  Module.cpp  Token.cpp  TreeComparatorMapper.cpp  TreeComparatorOnline.cpp  TreePatternMatching.cpp  TreeTransformer.cpp
src/tool/syntax_generator/: EBNF.cpp  EBNFConstruct.cpp  EBNFRepresentation.cpp  LexerGenerator.cpp  ParserGenerator.cpp  RegularExpressionRepresentation.cpp  SyntaxGenerator.cpp  SyntaxReader.cpp  SyntaxRepresentation.cpp
